Actual colour fix and hopefully fix positioning for skills on mobile

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -65,7 +65,7 @@ hr.white-line {
 
 .Srow::after {
   content: "";
-  clear: none;
+  clear: both;
   display: table;
 }
 
@@ -433,11 +433,10 @@ a:focus, a:hover, a:active {
 }
 
 .btn-secondary {
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #18BC9C;
 }
 
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
-  background-color: #1a252f;
-  border-color: #1a252f;
+  background-color: #18BC9C;
+  border-color: #18BC9C;
 }
